--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0px;
 	background: #000000;
-	background-image: url("files/wallpaper.jpg");
+	background-image: url("../files/wallpaper.jpg");
 	background-size: 375px 667px;
 	background-repeat: no-repeat;
 }
@@ -18,7 +18,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 165px;
-		top: 10px;
+		top: 110px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -29,7 +29,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 253px;
-		top: 33px;
+		top: 133px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -40,7 +40,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 321px;
-		top: 97px;
+		top: 197px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -51,7 +51,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 340px;
-		top: 183px;
+		top: 283px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -62,7 +62,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 321px;
-		top: 282px;
+		top: 382px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -73,7 +73,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 253px;
-		top: 337px;
+		top: 437px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -84,7 +84,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 165;
-		top: 360px;
+		top: 460px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -95,7 +95,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 78;
-		top: 337px;
+		top: 437px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -106,7 +106,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 13;
-		top: 273px;
+		top: 373px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -118,7 +118,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: -10px;
-		top: 183px;
+		top: 283px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -129,7 +129,7 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 13px;
-		top: 97px;
+		top: 197px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
@@ -140,13 +140,9 @@ body {
 		height: 20px;
 		width: 20px;
 		left: 78px;
-		top: 33px;
+		top: 133px;
 		position: absolute;
 		background: #ffffff;
 		border-radius:50% 50% 50% 50%;
 		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
-	}
-
-	#minutes {
-
 	}
