--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,16 @@ body {
 		border-radius:50% 50% 50% 50%;
 		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
+
+#battery {
+	width: 110px;
+	height: 50px;
+	text-align: center;
+	font-size: 20px;
+	-webkit-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	color: blue;
+	background: rgba(222,247,244,0.5);
+	top: 280px;
+	left: 135px;
+	position: absolute;
+}
