--- a/css/style.css
+++ b/css/style.css
@@ -1,153 +1,167 @@
 body {
 	margin: 0px;
-	background: #000000;
 	background-image: url("../files/wallpaper.jpg");
 	background-size: 375px 667px;
 	background-repeat: no-repeat;
 }
 
-	#hour0 {
-		height: 20px;
-		width: 20px;
-		left: 180px;
-		top: 110px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour0 {
+	height: 20px;
+	width: 20px;
+	left: 180px;
+	top: 110px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour1 {
-		height: 20px;
-		width: 20px;
-		left: 263px;
-		top: 133px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour1 {
+	height: 20px;
+	width: 20px;
+	left: 263px;
+	top: 133px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour2 {
-		height: 20px;
-		width: 20px;
-		left: 331px;
-		top: 197px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour2 {
+	height: 20px;
+	width: 20px;
+	left: 331px;
+	top: 197px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour3 {
-		height: 20px;
-		width: 20px;
-		left: 350px;
-		top: 283px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour3 {
+	height: 20px;
+	width: 20px;
+	left: 350px;
+	top: 283px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour4 {
-		height: 20px;
-		width: 20px;
-		left: 331px;
-		top: 382px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour4 {
+	height: 20px;
+	width: 20px;
+	left: 331px;
+	top: 382px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour5 {
-		height: 20px;
-		width: 20px;
-		left: 263px;
-		top: 437px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour5 {
+	height: 20px;
+	width: 20px;
+	left: 263px;
+	top: 437px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour6 {
-		height: 20px;
-		width: 20px;
-		left: 180;
-		top: 460px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour6 {
+	height: 20px;
+	width: 20px;
+	left: 180;
+	top: 460px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour7 {
-		height: 20px;
-		width: 20px;
-		left: 93;
-		top: 437px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour7 {
+	height: 20px;
+	width: 20px;
+	left: 93;
+	top: 437px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour8 {
-		height: 20px;
-		width: 20px;
-		left: 28;
-		top: 373px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour8 {
+	height: 20px;
+	width: 20px;
+	left: 28;
+	top: 373px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
 
-	#hour9 {
-		height: 20px;
-		width: 20px;
-		left: 5px;
-		top: 283px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour9 {
+	height: 20px;
+	width: 20px;
+	left: 5px;
+	top: 283px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour10 {
-		height: 20px;
-		width: 20px;
-		left: 28px;
-		top: 197px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour10 {
+	height: 20px;
+	width: 20px;
+	left: 28px;
+	top: 197px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
-	#hour11 {
-		height: 20px;
-		width: 20px;
-		left: 93px;
-		top: 133px;
-		position: absolute;
-		background: #ffffff;
-		border-radius:50% 50% 50% 50%;
-		-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+#hour11 {
+	height: 20px;
+	width: 20px;
+	left: 93px;
+	top: 133px;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
 	}
 
 #battery {
 	width: 110px;
 	height: 50px;
-	text-align: center;
-	font-size: 20px;
-	-webkit-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
-	color: blue;
-	background: rgba(222,247,244,0.5);
 	top: 280px;
 	left: 135px;
+	z-index: 1;
 	position: absolute;
+	text-align: center;
+	font-size: 20px;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	color: blue;
+	background: rgba(222,247,244,0.5);
+}
+
+#timer {
+	width: 375px;
+	height: 50px;
+	top: 275px;
+	left: 0;
+	z-index: 2;
+	position: absolute;
+	text-align: center;
+	font-family: Menlo;
+	font-size: 30px;
+	color: #ffffff;
+	text-shadow: 0px 0px 10px #fff;
 }
