--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 	width: 20px;
 	left: 180px;
 	top: 110px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -21,6 +22,7 @@ body {
 	width: 20px;
 	left: 263px;
 	top: 133px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -32,6 +34,7 @@ body {
 	width: 20px;
 	left: 331px;
 	top: 197px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -43,6 +46,7 @@ body {
 	width: 20px;
 	left: 350px;
 	top: 283px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -54,6 +58,7 @@ body {
 	width: 20px;
 	left: 331px;
 	top: 382px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -65,6 +70,7 @@ body {
 	width: 20px;
 	left: 263px;
 	top: 437px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -76,6 +82,7 @@ body {
 	width: 20px;
 	left: 180;
 	top: 460px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -87,6 +94,7 @@ body {
 	width: 20px;
 	left: 93;
 	top: 437px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -98,6 +106,7 @@ body {
 	width: 20px;
 	left: 28;
 	top: 373px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -110,6 +119,7 @@ body {
 	width: 20px;
 	left: 5px;
 	top: 283px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -121,6 +131,7 @@ body {
 	width: 20px;
 	left: 28px;
 	top: 197px;
+	z-index: 2;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -132,6 +143,152 @@ body {
 	width: 20px;
 	left: 93px;
 	top: 133px;
+	z-index: 2;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute0 {
+	height: 20px;
+	width: 20px;
+	left: 180px;
+	top: 110px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute1 {
+	height: 20px;
+	width: 20px;
+	left: 263px;
+	top: 133px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute2 {
+	height: 20px;
+	width: 20px;
+	left: 331px;
+	top: 197px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute3 {
+	height: 20px;
+	width: 20px;
+	left: 350px;
+	top: 283px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute4 {
+	height: 20px;
+	width: 20px;
+	left: 331px;
+	top: 382px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute5 {
+	height: 20px;
+	width: 20px;
+	left: 263px;
+	top: 437px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute6 {
+	height: 20px;
+	width: 20px;
+	left: 180;
+	top: 460px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute7 {
+	height: 20px;
+	width: 20px;
+	left: 93;
+	top: 437px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute8 {
+	height: 20px;
+	width: 20px;
+	left: 28;
+	top: 373px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+
+#minute9 {
+	height: 20px;
+	width: 20px;
+	left: 5px;
+	top: 283px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute10 {
+	height: 20px;
+	width: 20px;
+	left: 28px;
+	top: 197px;
+	z-index: 1;
+	position: absolute;
+	background: #ffffff;
+	border-radius:50% 50% 50% 50%;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(222,247,244,1);
+	}
+
+#minute11 {
+	height: 20px;
+	width: 20px;
+	left: 93px;
+	top: 133px;
+	z-index: 1;
 	position: absolute;
 	background: #ffffff;
 	border-radius:50% 50% 50% 50%;
@@ -143,7 +300,7 @@ body {
 	height: 50px;
 	top: 280px;
 	left: 135px;
-	z-index: 1;
+	z-index: 0;
 	position: absolute;
 	text-align: center;
 	font-size: 20px;
@@ -157,7 +314,7 @@ body {
 	height: 50px;
 	top: 275px;
 	left: 0;
-	z-index: 2;
+	z-index: 1;
 	position: absolute;
 	text-align: center;
 	font-family: Menlo;
